# autotools

Example1/: README
Example2/: README  hello.c  whine.c
Example3/: Makefile.am  README  configure.ac
Example3/src/: whine.c
Example4/: Makefile.am  README  configure.ac
Example4/lib/: Makefile.am
Example4/src/: Makefile.am  main.c
Example5/: README  configure.ac
Example5/lib/: Makefile.am  customA.c  customA.h
Example5/src/: Makefile.am
cmake/projekt1/: CMakeLists.txt
cmake/projekt2/: CMakeLists.txt  tutorial.cpp
