lib_LTLIBRARIES = libcustomA.la			#noinst: is not distributed, only used for build
libcustomA_la_SOURCES = customA.c customA.h
# CURRENT  = The latest interface implementaition
# REVISION = Bugfix counter
# AGE      = The number of interfaces implemented, minus one.
#            The library supports all interfaces between CURRENT-AGE and CURRENT
#                              CURRENT:REVISION:AGE
libcustomA_la_LDFLAGS = -version-info 0:0:0
